--- a/content/styles/root.css
+++ b/content/styles/root.css
@@ -422,7 +422,7 @@ textarea:focus-visible {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 9999;
+  z-index: 100000;
   transition: opacity var(--transition-slow);
 }
 
